crates/validation/tests/snapshots/scenario_tests__python_capture_builds.snap
---
source: crates/validation/tests/scenario_tests.rs
expression: "(config, generated)"
---
[
  {
    "config": {
      "_python": {
        "capture": "testing/source-acme",
        "files": {
          "pyproject.toml": "[project]\n",
          "source-acme/__init__.py": "class Connector: pass\n",
          "uv.lock": "version = 1\n"
        },
        "spec": {
          "configSchema": {
            "$id": "test://example/int-string-captures?ptr=/captures/testing~1source-acme/endpoint/python/spec/configSchema",
            "properties": {
              "greeting": {
                "default": "Howdy",
                "type": "string"
              }
            },
            "type": "object"
          }
        }
      },
      "greeting": "Hello"
    },
    "image": "ghcr.io/estuary/capture-python:stable"
  },
  [
    "test://example/flow_generated/python/testing/source_acme/__init__.py"
  ]
]
